objects/Class_Student__c.object
<CustomObject>
    <label>Class Student</label>
    <nameField>
        <label>Class Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Class Students</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>AGE__c</fullName>
        <label>AGE</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRANCH__c</fullName>
        <label>BRANCH</label>
        <referenceTo>BRANCH__c</referenceTo>
        <relationshipLabel>Class Students</relationshipLabel>
        <relationshipName>Class_Students</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sports__c</fullName>
        <label>Sports</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cricket</fullName>
                </value>
                <value>
                    <fullName>Kabbadi</fullName>
                </value>
                <value>
                    <fullName>Hockey</fullName>
                </value>
                <value>
                    <fullName>Chess</fullName>
                </value>
                <value>
                    <fullName>Badminton</fullName>
                </value>
                <value>
                    <fullName>Volley Ball</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bus_fee__c</fullName>
        <formula>IF( Need_a_Bus_pass__c , 5000, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bus fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FeePaid__c</fullName>
        <inlineHelpText>The Total fee paid by the Student</inlineHelpText>
        <label>FeePaid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ROLL_NO__c</fullName>
        <displayFormat>CR-{0000}</displayFormat>
        <label>ROLL NO</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Mobile_No__c</fullName>
        <label>Mobile No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tution_Fee__c</fullName>
        <label>Tution Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Library_Fee__c</fullName>
        <label>Library Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Name__c</fullName>
        <label>Parent Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Fee__c</fullName>
        <label>Building Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Fee_paid__c</fullName>
        <label>Last Fee paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Need_a_Bus_pass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need a Bus pass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Email_Id__c</fullName>
        <label>Parent Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Parent_Relation__c</fullName>
        <label>Parent Relation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Mother</fullName>
                </value>
                <value>
                    <fullName>Guardian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Fee_paid_on__c</fullName>
        <description>Don&apos;t forget to change the date and time
The fee dont get updated untill the date gets updated</description>
        <inlineHelpText>To update the fees it is compulsory to change the date</inlineHelpText>
        <label>Last Fee paid on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Parent_Mobile_No__c</fullName>
        <label>Parent Mobile No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PERSONAL_GMAIL_ID__c</fullName>
        <label>PERSONAL GMAIL-ID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Parent_Occupation__c</fullName>
        <label>Parent Occupation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permanent_Address__c</fullName>
        <label>Permanent Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_College_Fee__c</fullName>
        <formula>Tution_Fee__c  +  Building_Fee__c -  (  IF( ISPICKVAL(Approval_Status__c, &apos;Approved&apos;),  Scholarship_Amount__c , 0)  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total College Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_fee_Pending__c</fullName>
        <formula>Bus_fee__c  +  Total_College_Fee__c  +  Library_Fee__c -  FeePaid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total fee Pending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CLASS_X_PERCENTAGE__c</fullName>
        <label>CLASS X PERCENTAGE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Scholarship_Amount__c</fullName>
        <label>Scholarship Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CLASS_XII_PERCENTAGE__c</fullName>
        <label>CLASS XII PERCENTAGE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Student__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>checking the box indicates that the student is eligible for government scholarship</inlineHelpText>
        <label>Reimbursement Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLASS_X_INSTITUTION_NAME__c</fullName>
        <label>CLASS X INSTITUTION NAME</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>student_permanent_address__c</fullName>
        <label>student permanent address</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>CLASS_XII_INSTITUTION_NAME__c</fullName>
        <label>CLASS XII INSTITUTION NAME</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>NA</fullName>
        <active>true</active>
        <label>NA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Male</fullName>
        <active>true</active>
        <label>Male</label>
    </recordTypes>
    <recordTypes>
        <fullName>bvjb</fullName>
        <active>false</active>
        <label>bvjb</label>
    </recordTypes>
    <recordTypes>
        <fullName>iiii</fullName>
        <active>false</active>
        <label>iiii</label>
    </recordTypes>
    <recordTypes>
        <fullName>Female</fullName>
        <active>true</active>
        <label>Female</label>
    </recordTypes>
    <validationRules>
        <fullName>scholarship_amount_check</fullName>
        <active>true</active>
        <errorConditionFormula>Scholarship_Amount__c  &gt;=  Tution_Fee__c</errorConditionFormula>
        <errorMessage>Scholarship amount is greater than tution fee
we cant pay that much amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fee_paid_greater_than_Total_fee</fullName>
        <active>true</active>
        <errorConditionFormula>FeePaid__c    &gt;   ( Total_College_Fee__c  +  Bus_fee__c  +  Library_Fee__c  )</errorConditionFormula>
        <errorDisplayField>FeePaid__c</errorDisplayField>
        <errorMessage>Seems like you&apos;ve paid some extra fees.
We just want what you should pay.
Pay the requried amount and Enjoy the tip</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>last_fee_paid_less_than_fee_pending</fullName>
        <active>true</active>
        <errorConditionFormula>Last_Fee_paid__c  &gt;  Total_fee_Pending__c</errorConditionFormula>
        <errorMessage>please dont pay more amount
dabbulu vurike radhu</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Scholarship_amount_less_than_tution_fee</fullName>
        <active>true</active>
        <errorConditionFormula>Scholarship_Amount__c   &gt;=   Tution_Fee__c</errorConditionFormula>
        <errorDisplayField>Scholarship_Amount__c</errorDisplayField>
        <errorMessage>Scholarship should be less than Tution fee</errorMessage>
    </validationRules>
</CustomObject>